--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "smooth-scroll": "^16.1.3",
+    "swiper": "^8.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
